SalesforceProject2/src/objects/ttt__c.object
<CustomObject>
    <fields>
        <fullName>auto_number_field__c</fullName>
        <label>auto_number_field</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>dizABC_picklist_c__c</fullName>
        <defaultValue>&quot;ASD&quot;</defaultValue>
        <description>test</description>
        <label>dizABC_picklist_c</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>asd</fullName>
                    <default>true</default>
                    <label>asd</label>
                </value>
                <value>
                    <fullName>xcvc</fullName>
                </value>
                <value>
                    <fullName>nbmbn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_ABC_location__c</fullName>
        <label>diz_ABC_location__c</label>
        <scale>12</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>diz_checkbox__c</fullName>
        <defaultValue>true</defaultValue>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_checkbox__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>diz_currency__c</fullName>
        <label>diz_currency__c</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>diz_location2__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_location2__c</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>diz_location__c</fullName>
        <description>test</description>
        <label>diz_location__c</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>diz_number__c</fullName>
        <description>test</description>
        <label>diz_number__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_percent__c</fullName>
        <description>test</description>
        <label>diz_percent__c</label>
        <precision>13</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>diz_phone2__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone2__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_phone__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_phone__c</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>diz_picklist2__c</fullName>
        <label>diz_picklist2__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>123</fullName>
                    <default>true</default>
                    <label>123</label>
                </value>
                <value>
                    <fullName>asd</fullName>
                </value>
                <value>
                    <fullName>qwe</fullName>
                </value>
                <value>
                    <fullName>zxc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_picklist__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_picklist__c</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>diz_url__c</fullName>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_url__c</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>picklist__c</fullName>
        <label>picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a1</fullName>
                </value>
                <value>
                    <fullName>a2</fullName>
                </value>
                <value>
                    <fullName>a3</fullName>
                </value>
                <value>
                    <fullName>a41</fullName>
                    <isActive>false</isActive>
                    <label>a41</label>
                </value>
                <value>
                    <fullName>a51</fullName>
                    <isActive>false</isActive>
                    <label>a51</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>textfield1__c</fullName>
        <label>textfield1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>textfield2__c</fullName>
        <label>textfield2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>textfield3__c</fullName>
        <label>textfield3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ttt</label>
    <nameField>
        <label>ttt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ttt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rule1</fullName>
        <active>true</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>picklist__c</errorDisplayField>
        <errorMessage>error</errorMessage>
    </validationRules>
</CustomObject>